--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,14 @@
     font-family: 'Poppins',cursive;
 }
 body{
-    color: rgb(255, 0, 255);
+    color: rgba(255, 255, 255, 0.729);
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(207, 21, 21);
+    background-color: rgb(0, 0, 0);
 }
 .greetings{
     font-size: 6rem;
@@ -21,11 +21,11 @@ body{
 }
 @keyframes glow{
     0%, 100%{
-        color: #fff;
-        text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
+        color: #000000;
+        text-shadow: 0 0 12px #bb00ff, 0 0 50px #cc00ff, 0 0 100px #c300ff;
     }
     10%, 90%{
-        color: #111;
+        color: #000000;
         text-shadow: none;
     }
 }
@@ -42,25 +42,25 @@ body{
     animation-delay: .8s;
 }
 .greetings > span:nth-child(6){
-    animation-delay: .1s ;
+    animation-delay: 1s ;
 }
 .greetings > span:nth-child(7){
-    animation-delay: .1.2s ;
+    animation-delay: 1.2s ;
 }
 .greetings > span:nth-child(8){
-    animation-delay: .1.4s;
+    animation-delay: 1.4s;
 }
 .greetings > span:nth-child(9){
-    animation-delay: .1.6s;
+    animation-delay: 1.6s;
 }
 .greetings > span:nth-child(10){
-    animation-delay: .1.8s ;
+    animation-delay: 1.8s ;
 }
 .greetings > span:nth-child(11){
-    animation-delay: .2s ;
+    animation-delay: 2.0s ;
 }
 .greetings > span:nth-child(12){
-    animation-delay: .2.2s;
+    animation-delay: 2.2s ;
 }
 
 .description{
@@ -71,7 +71,7 @@ body{
 .button a{
     text-decoration: none;
     font-size: 1rem;
-    color: #ee00ff;
+    color: #000000;
 }
 
 @media screen and (max-width:574px){
